deploy/kubernetes/docker-desktop/query-api-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: speech-query-http-api-deployment
  #namespace: qa
  labels:
    version: 1.0.0
    product: speech-query-http-api
    environment: qa

spec:
  replicas: 1
  selector:
    matchLabels:
      app: speech-query-http-api
      env: qa
  template:
    metadata:
      labels:
        app: speech-query-http-api
        env: qa
    spec:
      containers:
      - name: speech-query-http-api
        image: logcornerhub/logcorner-edusync-speech-query
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 443
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
