deploy/kubernetes/docker-desktop/query-api-service.yml
apiVersion: v1
kind: Service
metadata:
  #namespace: qa
  name: speech-query-http-api-service
  labels:
    version: 1.0.0
    product: speech-query-http-api
    environment: qa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: speech-query-http-api
    env: qa
